# pyqt5-env

./: MyApp-pyqt5.py  designer.bat  install-pyqt5-tools.bat  poetry.lock-  pyproject.toml  qthread-try.py  qthread_app.py  ttest.py  ui2py.bat  untitled-test.ui  untitled-test_ui.py
tests/: test_py38_env.py
