[tool.poetry]
name = "py38-env"
version = "0.1.0"
description = ""
authors = ["ffreemt <yucongo+fmt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.2"
pyqt5 = "^5.15.0"
bs4 = "^0.0.1"
pyqt5-tools = "^5.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.18.1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
