[tool.poetry]
name = "pyqt5-env"
version = "0.1.0"
description = ""
authors = ["freemt <yucongo+fmt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
logzero = "^1.7.0"
loguru = "^0.6.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
